--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -1,6 +1,11 @@
-body,
-html {
-  margin: 0px;
-  padding: 0px;
-  position: fixed;
+
+body, html {
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+    width: 100%;
+    height: 100%;
+}
+canvas {
+    display: block;
 }
